--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
+    "react-scroll-to-bottom": "^4.2.0",
     "react-toastify": "^8.1.0",
     "socket.io-client": "^4.5.1",
     "web-vitals": "^2.1.4"
